# LottoApp

./: 649_Results_1982-2026.xlsx  README.md  mega_sena_asloterias_ate_concurso_2973_sorteio.xlsx
Figma Design/: Lotto 649.fig
MegaSenaApp/: Readme.txt  backup.kv  main.py  pyproject.toml
MegaSenaApp/assets/: TextImages.psd
MegaSenaApp/kv/: main.kv  main_screen.kv  search_screen.kv  stats_screen.kv
MegaSenaApp/screens/: main_screen.py  search_screen.py
